# adaptive-autosar

./: Cargo.toml  LICENSE  README.md
platform/: Cargo.toml
platform/ara/: Cargo.toml  core.rs  exec.rs  lib.rs
platform/ara/core/: instance_specifier.rs
platform/ara/exec/: execution_client.rs
platform/bins/em/: Cargo.toml  application.rs  config.rs  em.rs  event.rs  manifest.rs
platform/bins/em/config/: argument.rs  configuration.rs
platform/bins/em/event/: state_manager.rs
platform/bins/em/function_group_state/: group.rs
platform/bins/em/manifest/: execution_manifest.rs  machine_manifest.rs
platform/bins/em/manifest/yamls/: execution_manifest.yaml  machine_manifest.yaml
platform/libs/ara/core/: Cargo.toml  core.rs  error_domain.rs  instance_specifier.rs
platform/libs/ara/exec/: Cargo.toml  error.rs  exec.rs  execution_client.rs  function_group.rs  manifest.rs  state_client.rs
platform/libs/ara/exec/manifest/: execution_manifest.rs  machine_manifest.rs
platform/libs/ara/exec/manifest/yamls/: execution_manifest.yaml  machine_manifest.yaml
