[workspace]
members = [
    "platform/libs/ara/core",
    "platform/libs/ara/exec",
    "platform/bins/em",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
lazy_static = "1.5"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }