[package]
name = "em"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "em"
path = "em.rs"

[dependencies]
core = { path = "../../libs/ara/core"}
exec = { path = "../../libs/ara/exec"}
thiserror = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
tokio = "1.40"
serde = "1.0"