[package]
name = "em"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "em"
path = "em.rs"

[dependencies]
ara_core = { path = "../../libs/ara/core"}
ara_exec = { path = "../../libs/ara/exec"}
thiserror = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde = "1.0"
libc = "0.2"