[package]
name = "em"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "em"
path = "em.rs"

[dependencies]
ara_core = { path = "../../libs/ara/core"}
ara_exec = { path = "../../libs/ara/exec"}
thiserror = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
libc = "0.2"
bincode = { workspace = true }
once_cell = "1.20"