[package]
name = "ara_exec"
version = "0.1.0"
edition = "2021"

[lib]
path = "exec.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
strum = "0.26"
strum_macros = "0.26"
lazy_static = "1.5"