[package]
name = "ara_exec"
version = "0.1.0"
edition = "2021"

[lib]
path = "exec.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
strum = "0.26"
strum_macros = "0.26"
lazy_static = "1.5"